--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-hello
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Video</title>
+  </head>
+  <body>
+    main index
+    <div id="app">
+
+    </div>
+
+  </body>
+</html>
